[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.96.1"}
sqlalchemy = "1.4.46"
asyncpg = "^0.27.0"
alembic = "^1.9.3"
psycopg2 = "^2.9.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^2.7.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
flake8 = "^6.0.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
